--- a/Main/index.html
+++ b/Main/index.html
@@ -63,9 +63,9 @@
                     We bet, there's the goodness of cream in every bite!</p>
                     <div class="social-icons">
                         <ul class="flex">
-                            <li><a href="https://www.youtube.com/channel/UC1v5h3FrfV2_r8qUxCbld3g" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
-                            <li><a href="https://www.facebook.com/malwainstitute/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
-                            <li><a href="https://www.instagram.com/malwa_institute_of_technology/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
+                            <li><a href="https://www.youtube.com/watch?v=BKMCbgTd2Jg" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+                            <li><a href="https://www.facebook.com/mgmits.official" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
+                            <li><a href="https://instagram.com/mits_kochi?igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></li>
                         </ul>
                     </div>
                 </div>
