--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -125,12 +125,11 @@
                 <!-- Filter Buttons -->
                 <div class="btn-container grid grid-4">
                     <button id="menu-filter" class="filter-btn btn current" type="button" data-id="all">All</button>
-                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Burger">Burger</button>
-                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Sandwitch">Sandwich</button>
-                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Fries">Fries</button>
-                    <button id="menu-filter" class="filter-btn btn fv" type="button" data-id="Maggie">Maggie</button>
-                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Beverages">Beverages</button>
-                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Pasta">Pasta</button>
+                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Snacks">Snacks</button>
+                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Drinks">Drinks</button>
+                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Frozen Treats">Frozen Treats</button>
+                    <button id="menu-filter" class="filter-btn btn fv" type="button" data-id="Cup Noodles">Cup Noodles</button>
+                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Bhaji">Bhaji</button>
                 </div>
            </div>
            <hr>
