--- a/Main/index.html
+++ b/Main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mit Canteen | Home</title>
+    <title>MITS Kiosk | Home</title>
     
     <!-- Page Icon -->
     <link rel="Micosoft icon" href="assets/images/MIT LOGO.png">
@@ -43,17 +43,23 @@
     <!-- Modal LogIn -->
     <section class="sign-modal"><!-- Comes From Js File --></section>
 
-    <section class="prakat-ho-animation">
+    <!--<section class="prakat-ho-animation">
         <img src="assets/images/footer-illustration.webp" loading="lazy" alt="Home Page Image">
-    </section>
+    </section>-->
 
     <!-- Hero Section -->
     <section class="hero my-2">
         <main class="container-min grid grid-1 jc-ai-center">
-            <h1 class="clr-green lg text-center">Pocket Friendly Cafe</h1>
-            <article class="hero-article flex jc-ai-center">
-                <img src="assets/images/Mit & Canteen.svg" loading="lazy" alt="Home Canteen Image" >
-                <div class="my-2 p-2">
+            <h1 class="clr-purple lg text-center">Welcome to the world of MITS Kiosk!</h1>
+            <h3 class="text-center clr-black">Where would you like to order from?</h3>
+            <div class="cors">
+                <button><a href="client-side.html">Cafe</a></button>
+                <button><a href="client-side.html">Store</a></button>
+            </div>
+            
+            <!--<article class="hero-article flex jc-ai-center">
+                <img src="assets/images/Mit & Canteen.svg" loading="lazy" alt="Home Canteen Image" >-->
+                <!--<div class="my-2 p-2">
                     <h3 class="clr-red md">Asian Cuisines & Beverages</h3>
                     <p>Each and every day we strive to better serve our community, 
                     customers with food that's fresh, tasty and healthy.
@@ -69,7 +75,7 @@
                         </ul>
                     </div>
                 </div>
-            </article>
+            </article>-->
         </main>
     </section>
 
@@ -78,14 +84,14 @@
     <!-- Come & Dine Section -->
     <section class="showcase my-3">
         <main class="container-min grid-1 text-center jc-ai-center">
-            <!-- Heading & Slogan -->
+            <!-- Heading & Slogan 
             <article>
                 <h1 class="lg">__ Come and Dine __</h1>
                 <h6 class="md">with the finest</h6>
-            </article>
+            </article>-->
             <!-- Show Case Content -->
             <article class="grid grid-3">
-                <div class="m-2">
+                <!--<div class="m-2">
                     <h4 class="md">Fresh Daily</h4>
                     <img src="assets/images/waiter.svg" loading="lazy" alt="">
                     <p>Savour the creamy goodness of Champion Fruit Cream. 
@@ -102,24 +108,24 @@
                     <img src="assets/images/burger.svg" loading="lazy" alt="">
                     <p>Each and every day we strive to better serve our 
                        community, customers with food that's fresh, tasty and healthy.</p>
-                </div>
+                </div>-->
             </article>
         </main>
     </section>
 
-    <!-- Most Loved Dishes -->
+    <!-- Most Loved Dishes 
     <section class="dishes my-4">
         <main class="container-min">
             <h1 class="text-center lg p-1">Our Most Loved Dishes</h1>
             <div class="flex jc-ai-center" id="best-dishes-container">
-                <!-- Comes Through JS -->
+                 Comes Through JS 
             </div>
         </main>
-    </section>
+    </section>-->
 
-    <section class="prakat-ho-animation">
+    <!--<section class="prakat-ho-animation">
         <img src="assets/images/footer-illustration.webp" loading="lazy" alt="Home Page Image">
-    </section>
+    </section>-->
 
     <!-- Customers Footer -->
     <footer class="customer-footer"><!-- Comes Through JS --></footer>
