--- a/Main/index.html
+++ b/Main/index.html
@@ -53,8 +53,10 @@
             <h1 class="clr-purple lg text-center">Welcome to the world of MITS Kiosk!</h1>
             <h3 class="text-center clr-black">Where would you like to order from?</h3>
             <div class="cors">
-                <button><a href="client-side.html">Cafe</a></button>
-                <button><a href="client-side.html">Store</a></button>
+                <div class="b1">
+                    <a href="client-side.html">Cafe</a>
+                </div>
+                <div class="b2"><a href="client-side.html">Store</a></div>
             </div>
             
             <!--<article class="hero-article flex jc-ai-center">
