js folder update

--- a/Main/index.html
+++ b/Main/index.html
@@ -60,7 +60,7 @@
                 <div class="b1">
                     <a href="client-side.html">Cafe</a>
                 </div>
-                <div class="b2"><a href="client-side.html">Store</a></div>
+                <div class="b2"><a href="store.html">Store</a></div>
             </div>
             
             <!--<article class="hero-article flex jc-ai-center">
