--- a/Main/Store.html
+++ b/Main/Store.html
@@ -105,6 +105,7 @@
                 <div class="btn-container grid grid-4">
                     <button id="menu-filter" class="filter-btn btn current" type="button" data-id="all">All</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Stationery">Stationery</button>
+                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Chocolates">Chocolates</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Lab Record">Lab Record</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Print">Print</button>
                 </div>
