--- a/Main/index.html
+++ b/Main/index.html
@@ -48,10 +48,10 @@
     </section>-->
     
     <!-- Hero Section -->
-    <section class="hero my-2">
+    <section class="hero">
         <main class="container-min grid grid-1 jc-ai-center">
 
-            <h1 class="clr-purple lg text-center">Welcome to MITS Kiosk!</h1>
+            <h1 class="heading">Welcome to MITS Kiosk!</h1>
             <div class="cafe">
                 <h3 class="text-center clr-purple">--MITS Cafe--</h3>
                 <p>Welcome to our MITS cafe, a vibrant and cozy space where students can relax and indulge in delicious snacks and beverages.Experience the perfect blend of flavors and community at our cafe, where quality ingredients and a warm atmosphere come together to create a memorable dining experience.</p>
@@ -62,7 +62,7 @@
             </div>
             <div class="store">
                 <h3 class="text-center clr-purple">--MITS Store--</h3>
-                <p>Discover a world of convenience and essentials at our MITS store, your one-stop shop for all your academic needs, from textbooks and stationery to college merchandise and technology.</p>
+                <p>Discover a world of convenience and essentials at our MITS store, your one-stop shop for all your academic needs, from textbooks and stationery to college merchandise and technology.Step into our store and explore a wide range of products curated to enhance your college experience, featuring trendy fashion, school supplies, chocolates and unique items that reflect our campus spirit.</p>
                 <div class="gallery">
                 <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
                 <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
