--- a/Main/Store.html
+++ b/Main/Store.html
@@ -91,7 +91,7 @@
     <!-- Hero -->
     <section class="menu-heroen">
         <div class="banner">
-            <h1 class="banner-title lg">Our Menu</h1>
+            <h1 class="banner-title lg">Explore our Products</h1>
             <button class="banner-btn btn">order now</button>
         </div>
     </section>
@@ -108,8 +108,10 @@
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Chocolates">Chocolates</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Lab Record">Lab Record</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Print">Print</button>
+                    
                 </div>
            </div>
+          
            <hr>
            <!-- Menu Items -->
            <div class="menu-section grid grid-3">
