--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -40,7 +40,7 @@
             <div class="site-title flex align-item-center">
                 <div>
 
-                    <a href="client-side.html"><h1><span class="clr-purple">MITS</span> <span class="clr-whitish">Kiosk</span></h1></a>
+                    <a href="client-side.html"><h1><span class="clr-red">MITS</span> <span class="clr-white">Kiosk</span></h1></a>
 
                   
                 </div>
