client-side.html
client and store

--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -40,7 +40,7 @@
             <div class="site-title flex align-item-center">
                 <div>
 
-                    <a href="client-side.html"><h1><span class="clr-purple">MITS</span> <span class="clr-whitish">Kiosk</span></h1></a>
+                    <a href="client-side.html"><h1><span class="clr-red">MITS</span> <span class="clr-white">Kiosk</span></h1></a>
 
                   
                 </div>
@@ -54,7 +54,7 @@
             <!-- Right Navigation -->
             <nav class="site-nav flex left-nav align-item-center">                
                 <ul class="flex">
-                    <li><a href="client-side.html"><i class="fas fa-cocktail"></i> Menu</a></li>
+                    <li><a href="Store.html">MITS Store</a></li>
                     <li><a href="user-orders.html"><i class="fas fa-coins"></i> Your Orders</a></li>
                     <button  class="btn" id="userlogout">Log Out</button>
                     <!-- Cart Icon -->
