--- a/Main/Store.html
+++ b/Main/Store.html
@@ -34,7 +34,7 @@
                 <div class="site-title flex align-item-center">
                     <div>
    
-                        <a href="client-side.html"><h1><span class="clr-purple">MITS</span> <span class="clr-whitish">Store</span></h1></a>
+                        <a href="client-side.html"><h1><span class="clr-red">MITS</span> <span class="clr-white">Store</span></h1></a>
                     </div>
                     <!-- Toggle Bars -->
                 <div class="toggle-bars mybar">
@@ -46,7 +46,7 @@
             <!-- Right Navigation -->
             <nav class="site-nav flex left-nav align-item-center">                
                 <ul class="flex">
-                    <li><a href="client-side.html"><i class="fas fa-cocktail"></i> Menu</a></li>
+                    <li><a href="client-side.html">MITS Cafe</a></li>
                     <li><a href="user-orders.html"><i class="fas fa-coins"></i> Your Orders</a></li>
                     <button  class="btn" id="userlogout">Log Out</button>
                     <!-- Cart Icon -->
