--- a/Main/user-orders.html
+++ b/Main/user-orders.html
@@ -48,8 +48,8 @@
             <!-- Right Navigation -->
             <nav class="site-nav flex left-nav align-item-center">                
                 <ul class="flex">
-                    <li><a href="client-side.html"><i class="fas fa-cocktail"></i> Menu</a></li>
-                    <li><a href="user-orders.html"><i class="fas fa-coins"></i> Your Orders</a></li>
+                    <li><a href="client-side.html"><i class="fas fa-cocktail"></i> MITS Cafe</a></li>
+                    <li><a href="Store.html">MITS Store</a></li>
                     <button  class="btn" id="userlogout">Log Out</button>
                     <!-- Cart Icon -->
                     <a class="flex" id="cart-btn">
