--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -135,7 +135,7 @@
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Drinks">Drinks</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Frozen Treats">Frozen Treats</button>
                     <button id="menu-filter" class="filter-btn btn fv" type="button" data-id="Cup Noodles">Cup Noodles</button>
-                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Bhaji">Bhaji</button>
+                    <button id="menu-filter" class="filter-btn btn" type="button" data-id="Bhajji">Bhajji</button>
                 </div>
            </div>
            <hr>
