--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -117,8 +117,10 @@
     <!-- Hero -->
     <section class="menu-hero">
         <div class="banner">
-            <h1 class="banner-title lg">Our Menu</h1>
-            <button class="banner-btn btn">order now</button>
+            <div class="heading">
+                <h1 class="banner-title lg">Our Menu</h1>
+                <button class="banner-btn btn">order now</button>
+            </div>
         </div>
     </section>
 
