--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -115,7 +115,7 @@
 
     <!-- Menu Showcase -->
     <!-- Hero -->
-    <section class="menu-hero">
+    <section class="cafe-hero">
         <div class="banner">
             <div class="heading">
                 <h1 class="banner-title lg">Our Menu</h1>
