Filter cart of store fixed

--- a/Main/Store.html
+++ b/Main/Store.html
@@ -103,7 +103,7 @@
                <h2 class="lg my-2">Filter By Category</h2>
                 <!-- Filter Buttons -->
                 <div class="btn-container grid grid-4">
-                    <button id="menu-filter" class="filter-btn btn current" type="button" data-id="all">All</button>
+                    <button id="menu-filter" class="filter-btn btn current" type="button" data-id="storeall">All</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Stationery">Stationery</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Chocolates">Chocolates</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Lab Record">Lab Record</button>
@@ -125,7 +125,7 @@
    <footer class="customer-footer" id="user-footer" style="margin-top: 10rem;"><!-- Comes Through JS --></footer>
 
    <!-- Menu & Admin Stuff -->
-   <script src="assets/js/smain.js"></script>
+   <script src="assets/js/main.js"></script>
    <script src="assets/js/features.js"></script>
     <!-- Controls User Stuff -->
     <script src="assets/js/functioning.js"></script>
