--- a/Main/index.html
+++ b/Main/index.html
@@ -64,8 +64,8 @@
                 <h2 class="text-center clr-red heading-c">MITS Cafe</h2>
                 <p>Welcome to our MITS cafe, a vibrant and cozy space where students can relax and indulge in delicious snacks and beverages.Experience the perfect blend of flavors and community at our cafe, where quality ingredients and a warm atmosphere come together to create a memorable dining experience.</p>
                 <div class="gallery">
-                <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-                <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
+                <img src="assets\images\cafe-mits.jpg">
+                <img src="assets\images\cafe1-mits.jpg">
                 </div>  
             </div>
             
@@ -73,8 +73,8 @@
                 <h2 class="text-center clr-red heading-c">MITS Store</h2>
                 <p>Discover a world of convenience and essentials at our MITS store, your one-stop shop for all your academic needs, from textbooks and stationery to college merchandise and technology.Step into our store and explore a wide range of products curated to enhance your college experience, featuring trendy fashion, school supplies, chocolates and unique items that reflect our campus spirit.</p>
                 <div class="gallery">
-                <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-                <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+                <img src="assets\images\store1-mits.jpg">
+                <img src="assets\images\printer.jpg">
                 </div> 
             </div>
             
