--- a/Main/client-side.html
+++ b/Main/client-side.html
@@ -132,7 +132,7 @@
                <h2 class="lg my-2">Filter By Category</h2>
                 <!-- Filter Buttons -->
                 <div class="btn-container grid grid-4">
-                    <button id="menu-filter" class="filter-btn btn current" type="button" data-id="all">All</button>
+                    <button id="menu-filter" class="filter-btn btn current" type="button" data-id="cafeall">All</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Snacks">Snacks</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Drinks">Drinks</button>
                     <button id="menu-filter" class="filter-btn btn" type="button" data-id="Frozen Treats">Frozen Treats</button>
