--- a/Main/admin-Store.html
+++ b/Main/admin-Store.html
@@ -41,7 +41,7 @@
             <a href="index.html"
               ><h1>
                 <span class="clr-red">MITS</span>
-                <span class="clr-white">Kiosk</span>
+                <span class="clr-white">Store</span>
               </h1></a
             >
           </div>
@@ -55,9 +55,9 @@
         <!-- Right Navigation -->
         <nav class="site-nav flex left-nav align-item-center">
           <ul class="flex">
-            <li><a href="admin-Store.html">Store</a></li>
+            <li><a href="admin-side.html">Cafe</a></li>
             <li><a href="order.html">Orders</a></li>
-            <li><a href="admin-side.html">Product Management</a></li>
+            <li><a href="admin-Store.html">Product Management</a></li>
             <button class="btn" id="logout" style="padding: 10px 20px">
               Log Out
             </button>
@@ -70,9 +70,9 @@
     <header class="mob-navbar">
       <nav class="nav container">
         <ul class="mob-ul">
-          <li><a href="admin-Store.html">Store</a></li>
+          <li><a href="admin-side.html">Cafe</a></li>
           <li><a href="orders.html">Orders</a></li>
-          <li><a href="admin-side.html">Product Management</a></li>
+          <li><a href="admin-Store.html">Product Management</a></li>
           <button class="btn" id="logout" style="padding: 10px 20px">
             Log Out
           </button>
@@ -157,7 +157,7 @@
     </section>
 
     <!-- Controls User Stuff -->
-    <script src="assets/js/admin.js"></script>
+    <script src="assets/js/admincafe.js"></script>
     <!-- Page Animations -->
     <script src="assets/js/animations.js"></script>
     <!-- Menu & Admin Stuff -->
