--- a/Main/Storeorder.html
+++ b/Main/Storeorder.html
@@ -109,6 +109,6 @@
       </div>
     </section>
 
-    <script src="assets/js/admin.js"></script>
+    <script src="assets/js/adimstore.js"></script>
   </body>
 </html>
