--- a/Main/admin-Store.html
+++ b/Main/admin-Store.html
@@ -157,7 +157,7 @@
     </section>
 
     <!-- Controls User Stuff -->
-    <script src="assets/js/admincafe.js"></script>
+    <script src="assets/js/adminstore.js"></script>
     <!-- Page Animations -->
     <script src="assets/js/animations.js"></script>
     <!-- Menu & Admin Stuff -->
