--- a/Main/order.html
+++ b/Main/order.html
@@ -78,37 +78,22 @@
       </nav>
     </header>
 
-    <section class="add-product remove">
-      <div class="container-min grid">
-        <div class="title md text-center">ravindra@gmail.com Orders</div>
-        <hr />
-        <!-- Add Menu Item -->
-        <article class="menu-item text-center grid grid-1" id="custom">
-          <table>
-            <tr>
-              <th>S.No.</th>
-              <th>Food Item</th>
-              <th>Amount</th>
-              <th>Total</th>
-            </tr>
-            <tr>
-              <td>1.</td>
-              <td>Double Cheese Potato Burger</td>
-              <td>2</td>
-              <td>90.00</td>
-            </tr>
-            <tr>
-              <td>2.</td>
-              <td>Veg Club Sandwitch</td>
-              <td>1</td>
-              <td>120.00</td>
-            </tr>
-          </table>
-          <div class="bold">Sub-Total: 210.00</div>
-        </article>
-      </div>
-    </section>
+<section class="add-product remove">
+  <div class="container-min grid">
+    <div class="title md text-center">Orders</div>
+    <hr />
+    <div id="user-list" class="user-list">
+      <!-- User names will be dynamically added here -->
+    </div>
+    <div id="order-details" class="order-details">
+      <!-- Order details will be dynamically added here -->
+    </div>
+  </div>
+</section>
 
-    <script src="assets/js/admin.js"></script>
-  </body>
+
+<script src="assets/js/functioning.js"></script>
+<script src="assets/js/orders.js"></script>
+<script src="assets/js/admin.js"></script>
+</body>
 </html>
