--- a/Main/Store.html
+++ b/Main/Store.html
@@ -47,7 +47,7 @@
             <nav class="site-nav flex left-nav align-item-center">                
                 <ul class="flex">
                     <li><a href="client-side.html">MITS Cafe</a></li>
-                    <li><a href="user-orders.html"><i class="fas fa-coins"></i> Your Orders</a></li>
+                    <li><a href="user-orders.html"> Your Orders</a></li>
                     <button  class="btn" id="userlogout">Log Out</button>
                     <!-- Cart Icon -->
                     <a class="flex" id="cart-btn">
