--- a/Main/user-orders.html
+++ b/Main/user-orders.html
@@ -112,7 +112,7 @@
             <!-- heading -->
             <main class="current-orders title" style="font-size: 1.7rem;">Current Orders</main>
             <!-- Shows Current Orders -->
-            <div class="order-inner"></div>
+            <div id="order-details"></div>
         </div>
     </section>
 
@@ -131,6 +131,8 @@
     <script src="assets/js/features.js"></script>
     <!-- Controls User Stuff -->
     <script src="assets/js/functioning.js"></script>
+
+    <script src="assets/js/your_orders.js"></script>
 
 </body>
 </html>
