var newMenu added as logged array in other javascripts

--- a/Main/order.html
+++ b/Main/order.html
@@ -91,7 +91,7 @@
   </div>
 </section>
 
-
+<script src="assets/js/main.js"></script>
 <script src="assets/js/functioning.js"></script>
 <script src="assets/js/orders.js"></script>
 <script src="assets/js/admin.js"></script>
