--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -208,6 +208,9 @@
     </section>
 
     <!-- Controls User Stuff -->
+
+    <script src="assets/js/main.js"></script>
+
     <script src="assets/js/admin.js"></script>
     <!-- Page Animations -->
     <script src="assets/js/animations.js"></script>
