separated cafe and store array

--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -55,7 +55,8 @@
         <!-- Right Navigation -->
         <nav class="site-nav flex left-nav align-item-center">
           <ul class="flex">
-            <li><a href="order.html">Orders</a></li>
+            <li><a href="order.html">Cafe Orders</a></li>
+            <li><a href="Storeorder.html">Store Orders</a></li>
             <li><a href="admin-side.html">Product Management</a></li>
             <button class="btn" id="logout" style="padding: 10px 20px">
               Log Out
