--- a/Main/Store.html
+++ b/Main/Store.html
@@ -47,7 +47,7 @@
             <nav class="site-nav flex left-nav align-item-center">                
                 <ul class="flex">
                     <li><a href="client-side.html">MITS Cafe</a></li>
-                    <li><a href="user-orders.html"> Your Orders</a></li>
+                    <li><a href="store-user-orders.html"> Your Orders</a></li>
                     <button  class="btn" id="userlogout">Log Out</button>
                     <!-- Cart Icon -->
                     <a class="flex" id="cart-btn">
@@ -125,7 +125,7 @@
    <footer class="customer-footer" id="user-footer" style="margin-top: 10rem;"><!-- Comes Through JS --></footer>
 
    <!-- Menu & Admin Stuff -->
-   <script src="assets/js/main.js"></script>
+   <script src="assets/js/smain.js"></script>
    <script src="assets/js/features.js"></script>
     <!-- Controls User Stuff -->
     <script src="assets/js/functioning.js"></script>
