add button fixes

--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -211,7 +211,8 @@
     <!-- Controls User Stuff -->
 
     <script src="assets/js/main.js"></script>
-
+    <script src="assets/js/smain.js"></script>
+    
     <script src="assets/js/admin.js"></script>
     <!-- Page Animations -->
     <script src="assets/js/animations.js"></script>
