--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -58,6 +58,7 @@
             <li><a href="order.html">Cafe Orders</a></li>
             <li><a href="Storeorder.html">Store Orders</a></li>
             <li><a href="admin-side.html">Product Management</a></li>
+            <li><a href="users.html">Registered Users</a></li>
             <button class="btn" id="logout" style="padding: 10px 20px">
               Log Out
             </button>
@@ -72,6 +73,7 @@
         <ul class="mob-ul">
           <li><a href="orders.html">Orders</a></li>
           <li><a href="admin-side.html">Product Management</a></li>
+          <li><a href="users.html">Registered Users</a></li>
           <button class="btn" id="logout" style="padding: 10px 20px">
             Log Out
           </button>
@@ -209,9 +211,6 @@
     </section>
 
     <!-- Controls User Stuff -->
-
-    <script src="assets/js/main.js"></script>
-
     <script src="assets/js/admin.js"></script>
     <!-- Page Animations -->
     <script src="assets/js/animations.js"></script>
