--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -165,7 +165,7 @@
         <hr />
         <article class="choose-operation text-center">
           <button class="btn p-1" id="add-item-menu">
-            Add a Product to Menu
+            Add  Product to Menu
           </button>
           <button class="btn p-1" id="remove-item-menu">
             Remove a Product from Menu
