--- a/Main/Storeorder.html
+++ b/Main/Storeorder.html
@@ -56,6 +56,7 @@
         <ul class="flex">
           <li><a href="order.html">Cafe Orders</a></li>
           <li><a href="admin-side.html">Product Management</a></li>
+          <li><a href="users.html">Registered Users</a></li>
           <button class="btn" id="logout" style="padding: 10px 20px">
             Log Out
           </button>
