--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -59,7 +59,7 @@
             <li><a href="Storeorder.html">Store Orders</a></li>
             <li><a href="admin-side.html">Product Management</a></li>
             <li><a href="users.html">Registered Users</a></li>
-            <button class="btn" id="logout" style="padding: 10px 20px">
+            <button class="btn" id="userlogout" style="padding: 10px 20px">
               Log Out
             </button>
           </ul>
@@ -307,7 +307,7 @@
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/smain.js"></script>
-    
+
     <script src="assets/js/admin.js"></script>
     <!-- Page Animations -->
     <script src="assets/js/animations.js"></script>
