--- a/Main/index.html
+++ b/Main/index.html
@@ -43,6 +43,10 @@
     <!-- Modal LogIn -->
     <section class="sign-modal"><!-- Comes From Js File --></section>
 
+    <!-- Modal admin LogIn 
+    <section class="sign-modal"></section>
+        -->
+        
     <!--<section class="prakat-ho-animation">
         <img src="assets/images/footer-illustration.webp" loading="lazy" alt="Home Page Image">
     </section>-->
