--- a/Main/Store.html
+++ b/Main/Store.html
@@ -52,7 +52,7 @@
                     <!-- Cart Icon -->
                     <a class="flex" id="cart-btn">
                         <i class="fas fa-shopping-cart"></i>
-                        <p id="cart-values">0</p>
+                        <p id="scart-values">0</p>
                     </a>
                 </ul>
             </nav>
