--- a/Main/admin-side.html
+++ b/Main/admin-side.html
@@ -234,12 +234,12 @@
       </div>
     </section>
 
-    <section class="add-product add-item add-cont">
+    <!--<section class="add-product add-item add-cont">
       <div class="container-min grid">
         <div class="title md text-center">Add Product in Store Menu</div>
-        <hr />
+        <hr />-->
         <!-- Add Store Menu Item -->
-        <article class="menu-item text-center">
+        <!--<article class="menu-item text-center">
           <img src="https://luxor.in/media/catalog/product/cache/1d33a401d7d4f49c41930c20a2e836a7/9/0/9000030188_0_1.jpg" alt="Product image" />
 
           <div class="item-info">
@@ -273,9 +273,9 @@
     <section class="add-product add-item add-cont">
       <div class="container-min grid">
         <div class="title md text-center">Remove Product from Store Menu</div>
-        <hr />
+        <hr />-->
         <!-- Remove Store Menu Item -->
-        <article class="menu-item text-center">
+        <!--<article class="menu-item text-center">
           <div class="item-info">
             <figure>
               <div class="flex-column align-item-center">
@@ -302,7 +302,7 @@
           </div>
         </article>
       </div>
-    </section>
+    </section>-->
     <!-- Controls User Stuff -->
 
     <script src="assets/js/main.js"></script>
